edito la pagina hospedaje bog

--- a/bogota.html
+++ b/bogota.html
@@ -15,7 +15,7 @@
     <title>Bogotá</title>
 </head>
 
-<nav id="inicio-pag" class="navbar navbar-expand-lg barra navbar-light">
+<nav id="inicio-pag" class="navbar navbar-expand-lg barra navbar-light fixed-top">
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbar">
         <img src="/img/inicio/8.png" height="130" alt="MDB Logo"/></a>
@@ -26,6 +26,7 @@
                 <li><a class="btn btn-outline-success btn-rounded" href="#pie-pagina" role="button">Quiénes somos</a></li>
                 <li><a class="btn btn-outline-success btn-rounded" href="#" role="button">Regístrese</a></li>
                 <li><a class="btn btn-outline-success btn-rounded" href="index.html" role="button">Volver</a></li>
+                <li><a class="btn btn-outline-success btn-rounded" href="hospedaje-bog.html" role="button">Hospédate</a></li>
             </ul>
         </div>
     </div>
