--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <nav id="inicio-pag" class="navbar navbar-expand-lg barra navbar-light">
+    <nav id="inicio-pag" class="navbar navbar-expand-lg barra navbar-light fixed-top">
       <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbar">
           <img src="/img/inicio/8.png" height="130" alt="MDB Logo"/></a>
