oresuelvo problema con la barra

--- a/medellin.html
+++ b/medellin.html
@@ -34,7 +34,7 @@
     </div>
 </nav>
 
-  <div>
+  <div class="margin-barra">
     <iframe width="100%" height="523" src="https://www.youtube.com/embed/ZUBuuANOtvg" title="YouTube video player" frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
