--- a/bogota.html
+++ b/bogota.html
@@ -32,8 +32,8 @@
     </div>
 </nav>
 
-    <div>
-            <iframe width="100%" height="409" src="https://www.youtube.com/embed/78tOjjCutZM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="margin-barra">
+        <iframe width="100%" height="409" src="https://www.youtube.com/embed/78tOjjCutZM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <div class="container">
