--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 
-    <div class=" container">
+    <div class=" container margin-barra">
         <div class="row  align-items-sm-start m-4">
             <div class="col-sm-6">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
