cambios en pagina de registrate, y enlace para la pagina de registrate

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -19,19 +20,19 @@
 <body>
 
     <nav id="inicio-pag" class="navbar navbar-expand-lg barra navbar-light fixed-top">
-      <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbar">
-          <img src="/img/inicio/8.png" height="130" alt="MDB Logo"/></a>
-          <h1>URBAN TRAVEL</h1>
-          </div>
-          <div class="d-flex align-items-center">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li><a class="btn btn-outline-success btn-rounded" href="#pie-pagina" role="button">Quiénes somos</a></li>
-                  <li><a class="btn btn-outline-success btn-rounded" href="#" role="button">Regístrese</a></li>
-              </ul>
-          </div>
-      </div>
-  </nav>
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbar">
+                <img src="/img/inicio/8.png" height="130" alt="MDB Logo" /></a>
+                <h1>URBAN TRAVEL</h1>
+            </div>
+            <div class="d-flex align-items-center">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li><a class="btn btn-outline-success btn-rounded" href="#pie-pagina" role="button">Quiénes somos</a></li>
+                    <li><a class="btn btn-outline-success btn-rounded" href="registrate.html" role="button">Regístrese</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 
 
@@ -150,47 +151,46 @@
 
 
     <footer id="pie-pagina" class="text-center text-lg-start text-black" style="background-color: #F4FCD9">
-      <div class="container p-4 pb-0">
-        <section class="">
-          <div class="row">
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Urban Travel</h6>
-              <p>
-                Grupo conformado de estudiantes apasionados por plasmar una diversión turística a través de nuestros conocimientos.
-                Conformado por los futuros programadores: Johann Cruz, Carolina Taborda, Oscar Vásquez y Carolina Montoya. Déjanos tu
-                apoyo si te ha gustado nuestro trabajo. ¡Muchas gracias!
-              </p>
-            </div>
-  
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
-              <p><i class="fas fa-home mr-3"></i> Medellín-Bogotá, COL</p>
-              <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
-              <p><i class="fas fa-phone mr-3"></i> + 57 234 567 88</p>
-              <p><i class="fas fa-print mr-3"></i> + 57 234 567 89</p>
-            </div>
-  
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Síguenos</h6>
-              <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/" role="button"><i class="fab fa-facebook"></i></a>
-              <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/" role="button"><i class="fab fa-instagram"></i></a>
-              <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://www.github.com/" role="button"><i class="fab fa-github"></i></a>
-            </div>
-          </div>
-         </section>
-      </div>
-      <div class="text-center p-3" style="background-color: #00000033">
-          © 2022 Copyright:
-          <p>Página de origen educativo, se reservan los derechos de autor.</p>
-      </div>
-  </footer>
+        <div class="container p-4 pb-0">
+            <section class="">
+                <div class="row">
+                    <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Urban Travel</h6>
+                        <p>
+                            Grupo conformado de estudiantes apasionados por plasmar una diversión turística a través de nuestros conocimientos. Conformado por los futuros programadores: Johann Cruz, Carolina Taborda, Oscar Vásquez y Carolina Montoya. Déjanos tu apoyo si te ha gustado
+                            nuestro trabajo. ¡Muchas gracias!
+                        </p>
+                    </div>
+
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+                        <p><i class="fas fa-home mr-3"></i> Medellín-Bogotá, COL</p>
+                        <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+                        <p><i class="fas fa-phone mr-3"></i> + 57 234 567 88</p>
+                        <p><i class="fas fa-print mr-3"></i> + 57 234 567 89</p>
+                    </div>
+
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Síguenos</h6>
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/" role="button"><i class="fab fa-facebook"></i></a>
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/" role="button"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://www.github.com/" role="button"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <div class="text-center p-3" style="background-color: #00000033">
+            © 2022 Copyright:
+            <p>Página de origen educativo, se reservan los derechos de autor.</p>
+        </div>
+    </footer>
 
     <!-- MDB -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- Custom scripts -->
     <script type="text/javascript"></script>
-    <script  src="js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
