--- a/bogota.html
+++ b/bogota.html
@@ -24,7 +24,7 @@
         <div class="d-flex align-items-center">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li><a class="btn btn-outline-success btn-rounded" href="#pie-pagina" role="button">Quiénes somos</a></li>
-                <li><a class="btn btn-outline-success btn-rounded" href="#" role="button">Regístrese</a></li>
+                <li><a class="btn btn-outline-success btn-rounded" href="registrate.html" role="button">Regístrese</a></li>
                 <li><a class="btn btn-outline-success btn-rounded" href="index.html" role="button">Volver</a></li>
                 <li><a class="btn btn-outline-success btn-rounded" href="hospedaje-bog.html" role="button">Hospédate</a></li>
             </ul>
