--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="d-flex align-items-center">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li><a class="btn btn-outline-success btn-rounded" href="#pie-pagina" role="button">Quiénes somos</a></li>
-                  <li><a class="btn btn-outline-success btn-rounded" href="#" role="button">Regístrese</a></li>
+                  <li><a class="btn btn-outline-success btn-rounded" href="registrate.html" role="button">Regístrese</a></li>
               </ul>
           </div>
       </div>
