--- a/registrate.html
+++ b/registrate.html
@@ -32,29 +32,29 @@
 
     <div class="container">
         <div class="row col-4">
-            <form>
+            <form name=tuformulario>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Nombre y Apellidos</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <label for="nombre" class="form-label">Nombre y Apellidos</label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" aria-describedby="emailHelp">
                     <div id="emailHelp" class="form-text">Nunca compartiremos su información con nadie más.</div>
                 </div>
 
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Correo electronico</label>
-                    <input type="email" class="form-control" id="exampleInputPassword1">
+                    <label for="correo" class="form-label">Correo electronico</label>
+                    <input type="email" class="form-control" id="correo" name="correo">
                 </div>
 
                 <div class="mb-4">
-                    <label for="exampleInputPassword1" class="form-label">Numero de telefono</label>
-                    <input type="number" class="form-control" id="exampleInputPassword1">
+                    <label for="telefono" class="form-label">Numero de telefono</label>
+                    <input type="text" class="form-control" id="telefono">
                 </div>
 
                 <div>
-                    <select class="form-select mb-3" aria-label="Disabled select example">
+                    <select id="val2" class="form-select mb-3" aria-label="Disabled select example" oninput="registro()" >
                         <option selected>Selecciones su sexo</option>
                         <option value="1">Femenino</option>
                         <option value="2">Masculino</option>
-                        <option value="2">Otro</option>
+                        <option value="3">Otro</option>
                     </select>
 
                     <div class="mb-3 form-check">
@@ -68,15 +68,16 @@
                     </div>
 
                 </div>
-                <button type="submit" class="btn btn-primary m-3">Registrar</button>
+                <button onclick="registro ()" id="pin1" type="submit"    class="btn btn-primary m-3">Registrar</button>
+                
             </form>
 
         </div>
     </div>
-
-
-
-
+   
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/script1.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
