modifico cards de inicio, barra, pags hospedaje y pag bog

--- a/medellin.html
+++ b/medellin.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="css/styles-mde.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="css/mdb.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"/>
     <title>Conoce Medellín</title>
   </head>
   <body>
@@ -19,14 +20,14 @@
 
 <nav id="inicio-pag" class="navbar navbar-expand-lg barra navbar-light fixed-top">
     <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbar">
+        <div class="collapse navbar-collapse barra-logo" id="navbar">
         <img src="/img/inicio/8.png" height="130" alt="MDB Logo"/></a>
         <h1>MEDELLÍN</h1>
         </div>
         <div class="d-flex align-items-center">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li><a class="btn btn-outline-success btn-rounded" href="#pie-pagina" role="button">Quiénes somos</a></li>
-                <li><a class="btn btn-outline-success btn-rounded" href="registrate.html" role="button">Regístrese</a></li>
+                <li><a class="btn btn-outline-success btn-rounded" href="registrate.html" role="button">Iniciar Sesión/Registrarse</a></li>
                 <li><a class="btn btn-outline-success btn-rounded" href="index.html" role="button">Volver</a></li>
                 <li><a class="btn btn-outline-success btn-rounded" href="hospedaje-mde.html" role="button">Hospédate</a></li>
             </ul>
@@ -40,6 +41,23 @@
   </div>
 
   <br>
+
+  <div id="info" class="bg- bloque-1 py-5"> 
+    <div class="container">
+      <h3 class="text-center display-4 textoppal1">Lugares más aclamados por los turistas</h3>
+      <div class="row align-items-center">
+        <div class="col-12 col-md-12 text-center">
+          <hr/>
+          <h4 class="text-black">
+           Estos conforman parte de los lugares más atractivos de la ciudad; pero eso no quiere decir que son todos; incluso también puedes 
+           acceder a conocer pueblos mágicos en los alrededores de Medellín.
+          </h4>
+        </div>
+      </div>
+    </div>
+</div> 
+
+
   
   <div class="container-lg central">
 
@@ -55,7 +73,7 @@
                     Alberga una de las mayores colecciones de artes decorativas de Colombia. Es uno de los lugares favoritos para las 
                     personas amantes del arte, la cultura y la tradición.
                 </p>
-                <input type="button" value="Leer Más"><a href="https://www.museoelcastillo.org/"></a>
+                <a class="btn btn-outline-primary" href="https://www.museoelcastillo.org/" role="button" target="_blank">Ver más</a>
             </div>
         </div>
 
@@ -69,6 +87,7 @@
                     Conocer el parque de Berrío es muy importante debido que se encuentran varios espacios importantes, tales como: 
                     <b>La Plaza Botero, El Museo de Antioquia y El Palacio de la Cultura.</b>
                 </p>
+                <a class="btn btn-outline-primary" href="https://museodeantioquia.co/sitio/" role="button" target="_blank">Ver más</a>
             </div>
         </div>
 
@@ -84,6 +103,7 @@
                     gustos. Ofrece la posibilidad de descubrir la magia de su riqueza cultural, ambiental, el emprendimiento de su gente y 
                     su patrimonio arqueológico.
                 </p>
+                <a class="btn btn-outline-primary" href="https://parquearvi.org/Paginas/Parque%20Arv%C3%AD.aspx" role="button" target="_blank">Ver más</a>
             </div>
         </div>
 
@@ -97,6 +117,7 @@
                     Catalogada como un must-see en Colombia por un sinnúmero de guías de viajes en internet, La Comuna 13 de Medellín 
                     sorprende por su historia de resiliencia y transformación social. 
                 </p>
+                <a class="btn btn-outline-primary" href="https://www.zippytourcomuna13.com/?gclid=CjwKCAjwopWSBhB6EiwAjxmqDREPIRuJLmFTYqc1Ea87o6Y-MAn4jx51JYoYLYrEyzclf3j_ZFmBjhoC1d0QAvD_BwE" role="button" target="_blank">Ver más</a>
             </div>
         </div>   
 
@@ -110,7 +131,8 @@
                      Descubre cerca de Medellín fascinantes lugares colmados de biodiversidad, cultura y tecnología. Encuentra los secretos detrás de cada historia, 
                      cada obra y cada lugar de su respectivo pueblo. Entre los más destacados son:<b>Cauca Viejo, Jardín, Guatapé y El Peñol,
                     Santa Fé de Antioquia, Jericó, San Pedro de los Milagros,</b> entre muchos otros.
-                    </p>
+                     </p>
+                    <a class="btn btn-outline-primary" href="https://www.espanol.skyscanner.com/noticias/inspiracion/pueblos-cerca-de-medellin" role="button" target="_blank">Ver más</a>
                 </div>
             </div>
     </div>
