--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"/>
     <link rel="stylesheet" href="css/mdb.min.css" />
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/style.css" />
     <title>Urban Trabel</title>
 </head>
@@ -20,14 +20,14 @@
 
     <nav id="inicio-pag" class="navbar navbar-expand-lg barra navbar-light fixed-top">
       <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbar">
+          <div class="collapse navbar-collapse barra-logo" id="navbar">
           <img src="/img/inicio/8.png" height="130" alt="MDB Logo"/></a>
           <h1>URBAN TRAVEL</h1>
           </div>
           <div class="d-flex align-items-center">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li><a class="btn btn-outline-success btn-rounded" href="#pie-pagina" role="button">Quiénes somos</a></li>
-                  <li><a class="btn btn-outline-success btn-rounded" href="registrate.html" role="button">Regístrese</a></li>
+                  <li><a class="btn btn-outline-success btn-rounded" href="registrate.html" role="button">Iniciar Sesión/Registrarse</a></li>
               </ul>
           </div>
       </div>
@@ -123,6 +123,34 @@
             </div>
         </div>
     </div>
+
+    <div id="us" class="bg-light bloque-1 text-black py-5">
+        <div class="container">
+        <h5>Planea tu viaje</h5>
+        <h1 class="text-center display-1 textoppal1">¿A dónde ir?</h1>
+        <br>
+          <div class="row align-items-center">
+              <div class="col-12 col-md-4">
+                <h2>¿Sin saber por dónde empezar?</h2>
+                 <hr/>
+                  <p>
+                    ¡No te preocupes! Contamos con los medios necesarios para poder ayudarlo a planear su viaje y que lo pueda disfrutar 
+                    al máximo!
+                  </p>
+              </div>
+                  <div class="col-12 col-md-6 img-centro">
+                    <img class="img-fluid rounded" src="https://e00-expansion.uecdn.es/assets/multimedia/imagenes/2018/11/18/15425531101678.jpg" alt="">
+                  </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="info" class="bg- bloque-2 py-5"> 
+        <div class="container">
+            <h2 class="text-center display-4 textoppal1"><b>NUESTROS DESTINOS</b></h2>
+        </div>
+    </div> 
 
 
 
