--- a/registrate.html
+++ b/registrate.html
@@ -1,36 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/styles-mde.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Regístrate</title>
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <link rel="stylesheet" href="css/mdb.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"/>
+    <title>Registro</title>
+  </head>
 
 <body>
-    <div>
-        <nav class="navbar navbar-expand-lg navbar-dark caja bg-light">
-            <div class="container-fluid " id="color">
-                <img class="log" src="img/8.png" alt="" width="160" height="160">
-                <ul class="navbar-nav ms-auto">
-                    <a class="btn btn-outline-secondary m-2" href="#" role="button">Quiénes somos</a>
-                    <a class="btn btn-outline-secondary m-2" href="index.html" role="button">inicio</a>
+    <nav id="inicio-pag" class="navbar navbar-expand-lg barra navbar-light fixed-top">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse barra-logo" id="navbar">
+            <img src="/img/inicio/8.png" height="130" alt="MDB Logo"/></a>
+            <h1>ÚNETE</h1>
+            </div>
+            <div class="d-flex align-items-center">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li><a class="btn btn-outline-success btn-rounded" href="#pie-pagina" role="button">Quiénes somos</a></li>
+                    <li><a class="btn btn-outline-success btn-rounded" href="index.html" role="button">Volver</a></li>
                 </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
+
+    <div class ="img-inicio margin-barra">
+        <img class ="img-inicio" src="img/fondo2.jpg"/>
     </div>
 
-    <div class="container">
+    <br>
+    </hr>
+
+    <div class="container text-center">
         <div class="registro-titulo">
-            <h1>Regístrate</h1>
-            <p>Y disfruta de toda la inforamcion que tenemos para ti de nuestros sitios turisticos, tambien podras compartir informacion de paradas y lugar de interes para otros turistas, que como tui estan buscanco la mejor experiencia.</p>
+            <h1 class="textoppal1">Registrarte</h1>
+            <h5>Es rápido y fácil.</h5>
+            <p>Y disfruta de toda la información que tenemos para usted de nuestros sitios turísticos con ofertas, también podrás compartir 
+                información de interés para los demás turistas que buscan de igual manera la mejor experiencia.</p>
         </div>
     </div>
 
-    <div class="container">
+    <div class="container text-center">
         <div class="row col-4">
             <form name=tuformulario>
                 <div class="mb-3">
@@ -59,12 +77,12 @@
 
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Quiere Recibir información al correo electronico</label>
+                        <label class="form-check-label" for="exampleCheck1">Quiero recibir información al correo electrónico</label>
                     </div>
 
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Quiere Recibir información al numero de telefono</label>
+                        <label class="form-check-label" for="exampleCheck1">Quiero recibir información al número de teléfono</label>
                     </div>
 
                 </div>
@@ -74,6 +92,47 @@
 
         </div>
     </div>
+
+
+    <footer id="pie-pagina" class="text-center text-lg-start text-black" style="background-color: #F4FCD9">
+        <div class="container p-4 pb-0">
+          <section class="">
+            <div class="row">
+              <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 font-weight-bold">Urban Travel</h6>
+                <p>
+                  Grupo conformado de estudiantes apasionados por plasmar una diversión turística a través de nuestros conocimientos.
+                  Conformado por los futuros programadores: Johann Cruz, Carolina Taborda, Oscar Vásquez y Carolina Montoya. Déjanos tu
+                  apoyo si te ha gustado nuestro trabajo. ¡Muchas gracias!
+                </p>
+              </div>
+    
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+                <p><i class="fas fa-home mr-3"></i> Medellín-Bogotá, COL</p>
+                <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+                <p><i class="fas fa-phone mr-3"></i> + 57 234 567 88</p>
+                <p><i class="fas fa-print mr-3"></i> + 57 234 567 89</p>
+              </div>
+    
+              <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 font-weight-bold">Síguenos</h6>
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/" role="button"><i class="fab fa-facebook"></i></a>
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/" role="button"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://www.github.com/" role="button"><i class="fab fa-github"></i></a>
+              </div>
+            </div>
+           </section>
+        </div>
+        <div class="text-center p-3" style="background-color: #00000033">
+            © 2022 Copyright:
+            <p>Página de origen educativo, se reservan los derechos de autor.</p>
+        </div>
+    </footer>
+
+
+
+
    
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/script1.js"></script>
