organizo el logo

--- a/hospedaje-bog.html
+++ b/hospedaje-bog.html
@@ -19,7 +19,7 @@
     <nav id="inicio-pag" class="navbar navbar-expand-lg barra navbar-light fixed-top">
         <div class="container-fluid">
             <div class="collapse navbar-collapse barra-logo" id="navbar">
-            <img src="/img/inicio/8.png" height="130" alt="MDB Logo"/></a>
+            <img src="/img/inicio/8.png" height="130" alt="Logo Urban Travel"/></a>
             <h1>BOGOTÁ</h1>
             </div>
             <div class="d-flex align-items-center">
