--- a/registrate.html
+++ b/registrate.html
@@ -20,7 +20,7 @@
     <nav id="inicio-pag" class="navbar navbar-expand-lg barra navbar-light fixed-top">
         <div class="container-fluid">
             <div class="collapse navbar-collapse barra-logo" id="navbar">
-            <img src="/img/inicio/8.png" height="130" alt="Logo Urban Travel"/></a>
+            <img src="./img/inicio/8.png" height="130" alt="Logo Urban Travel"/></a>
             <h1>ÚNETE</h1>
             </div>
             <div class="d-flex align-items-center">
